--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preprocess-jsonc": "node scripts/convert-jsonc.mjs"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
