--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-tilt": "^1.0.2",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "strip-json-comments": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
