--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "preprocess-jsonc": "node scripts/convert-jsonc.mjs"
+    "preprocess-jsonc": "node convert-jsonc.mjs"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
