--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.13.5",
+    "framer-motion": "^12.9.2",
     "jsonc-parser": "^3.3.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-tilt": "^1.0.2",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
