navbar section state update + skill json setup (links to fix)

--- a/src/locales/it.jsonc
+++ b/src/locales/it.jsonc
@@ -29,5 +29,92 @@
     "nationality": "Italiano",
     // --------------------------------------- SKILLS SECTION ---------------------------------------
     "skills": "Skills",
-    "skillsDescription": "Durante il mio percorso di studi e anche per interesse personale, ho sviluppato conoscenze relative a differenti linguaggi di programmazione, software e framework che hanno portato alla mia crescita in ambito professionale."
+    "skillsDescription": "Durante il mio percorso di studi e anche per interesse personale, ho sviluppato conoscenze relative a differenti linguaggi di programmazione, software e framework che hanno portato alla mia crescita in ambito professionale.",
+    "technicalSkills": {
+      "android": "https://www.typescriptlang.org/",
+      "androidstudio": "https://www.typescriptlang.org/",
+      "api": "https://www.typescriptlang.org/",
+      "assembly": "https://www.typescriptlang.org/",
+      "azure": "https://www.typescriptlang.org/",
+      "c": "https://www.typescriptlang.org/",
+      "chartjs": "https://www.typescriptlang.org/",
+      "chatgpt": "https://www.typescriptlang.org/",
+      "clion": "https://www.typescriptlang.org/",
+      "cpp": "https://www.typescriptlang.org/",
+      "css": "https://www.typescriptlang.org/",
+      "dart": "https://www.typescriptlang.org/",
+      "docker": "https://www.typescriptlang.org/",
+      "expressjs": "https://www.typescriptlang.org/",
+      "firebase": "https://www.typescriptlang.org/",
+      "flutter": "https://www.typescriptlang.org/",
+      "gcp": "https://www.typescriptlang.org/",
+      "git": "https://www.typescriptlang.org/",
+      "github": "https://www.typescriptlang.org/",
+      "githubactions": "https://www.typescriptlang.org/",
+      "githubcopilot": "https://www.typescriptlang.org/",
+      "githubpages": "https://www.typescriptlang.org/",
+      "gitlab": "https://www.typescriptlang.org/",
+      "googlecolab": "https://www.typescriptlang.org/",
+      "gradle": "https://www.typescriptlang.org/",
+      "grafana": "https://www.typescriptlang.org/",
+      "hibernate": "https://www.typescriptlang.org/",
+      "html": "https://www.typescriptlang.org/",
+      "idea": "https://www.typescriptlang.org/",
+      "java": "https://www.typescriptlang.org/",
+      "javascript": "https://www.typescriptlang.org/",
+      "json": "https://www.typescriptlang.org/",
+      "jupyter": "https://www.typescriptlang.org/",
+      "jwt": "https://www.typescriptlang.org/",
+      "kafka": "https://www.typescriptlang.org/",
+      "keycloak": "https://www.typescriptlang.org/",
+      "kotlin": "https://www.typescriptlang.org/",
+      "latex": "https://www.typescriptlang.org/",
+      "linux": "https://www.typescriptlang.org/",
+      "materialui": "https://www.typescriptlang.org/",
+      "mongodb": "https://www.typescriptlang.org/",
+      "mysql": "https://www.typescriptlang.org/",
+      "nextjs": "https://www.typescriptlang.org/",
+      "ngrok": "https://www.typescriptlang.org/",
+      "nodejs": "https://www.typescriptlang.org/",
+      "npm": "https://www.typescriptlang.org/",
+      "numpy": "https://www.typescriptlang.org/",
+      "postgresql": "https://www.typescriptlang.org/",
+      "postman": "https://www.typescriptlang.org/",
+      "prometheus": "https://www.typescriptlang.org/",
+      "pycharm": "https://www.typescriptlang.org/",
+      "python": "https://www.typescriptlang.org/",
+      "pytorch": "https://www.typescriptlang.org/",
+      "react": "https://www.typescriptlang.org/",
+      "reactbootstrap": "https://www.typescriptlang.org/",
+      "rust": "https://www.typescriptlang.org/",
+      "spark": "https://www.typescriptlang.org/",
+      "spring": "https://www.typescriptlang.org/",
+      "sqlite": "https://www.typescriptlang.org/",
+      "tailwindcss": "https://www.typescriptlang.org/",
+      "tomcat": "https://www.typescriptlang.org/",
+      "typescript": "https://www.typescriptlang.org/",
+      "vim": "https://www.typescriptlang.org/",
+      "vite": "https://www.typescriptlang.org/",
+      "vmwareworkstation": "https://www.typescriptlang.org/",
+      "vscode": "https://www.typescriptlang.org/",
+      "webstorm": "https://www.typescriptlang.org/",
+      "windows": "https://www.typescriptlang.org/",
+      "wireshark": "https://www.typescriptlang.org/",
+      "wsl": "https://www.typescriptlang.org/",
+      "yaml": "https://www.typescriptlang.org/"
+    },
+    "nonTechnicalSkills": {
+      "chrome": "https://www.typescriptlang.org/",
+      "discord": "https://www.typescriptlang.org/",
+      "excel": "https://www.typescriptlang.org/",
+      "gmail": "https://www.typescriptlang.org/",
+      "linkedin": "https://www.typescriptlang.org/",
+      "notion": "https://www.typescriptlang.org/",
+      "notepadpp": "https://www.typescriptlang.org/",
+      "obs": "https://www.typescriptlang.org/",
+      "overleaf": "https://www.typescriptlang.org/",
+      "powerpoint": "https://www.typescriptlang.org/",
+      "teams": "https://www.typescriptlang.org/",
+      "word": "https://www.typescriptlang.org/",
+    }
 }
