--- a/src/locales/it.jsonc
+++ b/src/locales/it.jsonc
@@ -5,6 +5,7 @@
       "Su di Me",      // About Me section in Italian
       "Competenze",    // Skills section in Italian
       "Formazione",    // Formation section in Italian
+      "Esperienze Lavorative",    // Work Experiences section in Italian
       "Progetti",      // Projects section in Italian
       "Contattami"     // Contact Me section in Italian
     ],
@@ -116,5 +117,99 @@
       "powerpoint": "https://www.typescriptlang.org/",
       "teams": "https://www.typescriptlang.org/",
       "word": "https://www.typescriptlang.org/",
-    }
+    },
+    // --------------------------------------- EDUCATION SECTION ---------------------------------------
+    "education": "Education",
+    "educationDescription": "My training begins with a diploma in Administration, Finance and Marketing, which allowed me to do different work experiences, and then continue with a degree in Computer Engineering. The latter ended with an additional curricular internship experience, in which I developed an Android application that was the subject of my thesis.",
+    "educations": [
+      {
+        "title": "Master's degree, Computer Engineering, Artificial Intelligence and Data Analytics (Grade: 110L/110)",
+        "institution": "Politecnico di Torino",
+        "date": "29/07/2023 - 11/04/2025",
+        "place": "Corso Duca degli Abruzzi, 24, 10129 Torino TO, Italy",
+        "website": "https://www.polito.it/en"
+      },
+      {
+        "title": "Bachelor Degree in Computer Engineering (Grade: 110/110)",
+        "institution": "University of Salerno",
+        "date": "10/09/2018 - 29/09/2021",
+        "place": "Via Giovanni Paolo II, 132 - 84084 Fisciano (SA), Italy",
+        "website": "https://web.unisa.it/en/university"
+      },
+      {
+        "title": "Cambridge Assessment English First Certificate in English (Cambridge English Scale: 178)",
+        "institution": "Cambridge School of Sapri",
+        "date": "23/10/2021 - 25/06/2022",
+        "place": "Via Gianbattista Falcone, 8, 84073 Sapri SA",
+        "website": "https://www.cambridgeenglish.org/exams-and-tests/first-for-schools/"
+      },
+      {
+        "title": "Diploma Administration, Finance And Marketing (Grade: 100/100th)",
+        "institution": "Istituto Istruzione Superiore L. Da Vinci",
+        "date": "15/09/2013 - 05/07/2018",
+        "place": "Via Kennedy, 45, 84073 Sapri (SA), Italy",
+        "website": "https://www.iisdavincisapri.edu.it/"
+      },
+      {
+        "title": "Trinity Grade 6 (CEFR Level B1.2)",
+        "institution": "Trinity College London",
+        "date": "01/10/2015 - 31/05/2016",
+        "place": "Via Kennedy, 45, 84073 Sapri (SA), Italy",
+        "website": "https://www.trinitycollege.com/"
+      },
+      {
+        "title": "ECDL Certificate",
+        "institution": "A.I.C.A.",
+        "date": "02/04/2014 - 22/05/2015",
+        "place": "Via Kennedy, 45, 84073 Sapri (SA), Italy",
+        "website": "https://www.aicanet.it/"
+      }
+    ],
+    // --------------------------------------- WORK EXPERIENCE SECTION ---------------------------------------
+    "workExperience": "Work Experiences",
+    "workExperienceDescription": "I have had the opportunity to work in various companies, where I have gained valuable experience in software development and project management. I am always looking for new challenges and opportunities to grow professionally.",
+    "workExperiences": [
+      {
+        "title": "Curricular Internship",
+        "institution": "Politecnico di Torino",
+        "date": "15/09/2024 - 15/03/2025",
+        "place": "Corso Duca degli Abruzzi, 24, 10129 Torino TO, Italy",
+        "website": "https://www.polito.it/en"
+      },
+      {
+        "title": "Curricular Internship",
+        "institution": "Integrated Engineering Studio Garofalo & Partners Srl",
+        "date": "22/06/2021 - 30/07/2021",
+        "place": "Corso Vittorio Emanuele, 191 193 195 - 84122 Salerno (SA), Italy",
+        "website": "http://www.garofaloandpartners.com/eng/default.aspx"
+      },
+      {
+        "title": "Tourist Promoter Fair Bit Milan",
+        "institution": "Cicas Tourismo",
+        "date": "11/02/2018 - 13/02/2018",
+        "place": "Viale Teodorico, 20149 Milan (MI), Italy",
+        "website": "https://bit.fieramilano.it/en/"
+      },
+      {
+        "title": "Receptionist Miss Italia House",
+        "institution": "Cicas Turismo/Gruppo Eventi",
+        "date": "02/09/2017 - 09/09/2017",
+        "place": "Via Sant'Antonio, 11 - 30016 Jesolo (VE), Italy",
+        "website": "https://www.missitalia.it/casamissitalia/"
+      },
+      {
+        "title": "Accountant",
+        "institution": "Associate Study Dr. Davide D'angelo",
+        "date": "01/07/2017 - 15/08/2017",
+        "place": "Via Vallebona, 11 - 84070 San Giovanni A Piro (SA), Italy",
+        "website": "https://www.facebook.com/dangelo.dd/"
+      },
+      {
+        "title": "Receptionist Casa Sanremo",
+        "institution": "Cicas Turismo/Gruppo Eventi",
+        "date": "07/03/2017 - 13/03/2017",
+        "place": "Corso Giuseppe Garibaldi, 1 - 18038 Sanremo (IM), Italy",
+        "website": "https://www.casasanremo.it/"
+      }
+    ]
 }
