--- a/src/locales/it.jsonc
+++ b/src/locales/it.jsonc
@@ -223,5 +223,108 @@
         "website": "https://www.casasanremo.it/",
         "image": "./work/sanremo.jpg"
       }
-    ]
+    ],
+    // --------------------------------------- PROJECTS SECTION ---------------------------------------
+    "project": "Projects",
+    "categories": [
+      "All",
+      "Mobile",
+      "Web",
+      "Software",
+      "Embedded",
+      "ML"  
+    ],
+    "projects": [
+    {
+      "id": "Portfolio",
+      "category": "Web",
+      "description": "Website, Representing the Personal Portfolio, created via the IDE <a href='https://code.visualstudio.com/' target='_blank'>Visual Studio Code</a> from a <a href='https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/' target='_blank'>Template</a> already existing and enriched with additional features.",
+      "image": "./projects/portfolio.png",
+      "link": "https://truvella99.github.io/portfolio/"
+    },
+    {
+      "id": "Thesis_Android_App",
+      "category": "Mobile",
+      "description": "Implementation of an Android App To Manage Geofencing Logics for Territorial Promotion Purposes. It was built in <a href='https://www.java.com/en/' target='_blank'>Java</a>/<a href='https://www.w3.org/XML/' target='_blank'>XML</a>, using the IDE <a href='https://developer.android.com/studio' target='_blank'>Android Studio</a> and the <a href='https://developers.google.com/maps/documentation/android-sdk/overview' target='_blank'>Maps SDK for Android APIs</a> provided by Google Cloud.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/Android-App"
+    },
+    {
+      "id": "IoT",
+      "category": "Embedded",
+      "description": "Final project of the Internet of Things course, which automates the irrigation process of a plant, made in <a href='https://www.python.org/' target='_blank'>Python</a> via the IDE <a href='https://www.zerynth.com/zsdk/' target='_blank'>Zerynth studio</a> and the <a href='https://www.zerynth.com/' target='_blank'>Zerynth</a> platform, in collaboration with colleagues Luigi Fiore and Alessandro Costantino.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/Internet-of-Things"
+    },
+    {
+      "id": "Database",
+      "category": "Software",
+      "description": "Final project of the Databases course, which implements in <a href='https://en.wikipedia.org/wiki/SQL' target='_blank'>SQL</a> language (through the DBMS <a href='https://www.postgresql.org/' target='_blank'>PostgreSQL</a>) a relational database for a company that deals with the production and sale of coffee pods and capsules. Project realized in collaboration with colleagues Luigi Fiore, Mario Ferrara and Alessandro Costantino.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/Database"
+    },
+    {
+      "id": "Bot",
+      "category": "Software",
+      "description": "Bot Telegram, developed in <a href='https://www.python.org/' target='_blank'>Python</a> using <a href='https://www.jetbrains.com/pycharm/' target='_blank'>PyCharm</a> IDE and <a href='https://github.com/eternnoir/pyTelegramBotAPI' target='_blank'>pyTelegramBotAPI</a>, made for personal interest, with the aim of automating the management of subscriptions to streaming platforms. The bot remembers the renewal of subscriptions automatically, as well as a series of other additional operations, through notifications to the user. Everything is hosted on a Virtual Machine based on <a href='https://cloud.google.com/' target='_blank'>Google Cloud</a> services.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/Telegram-Bot"
+    },
+    {
+      "id": "Cambridge",
+      "category": "Software",
+      "description": "Simple <a href='https://www.python.org/' target='_blank'>Python</a> script (implemented via <a href='https://www.jetbrains.com/pycharm/' target='_blank'>PyCharm</a> IDE) for scoring in the <a href='https://www.cambridgeenglish.org/exams-and-tests/first/' target='_blank'>Cambridge English B2</a> test. The script requires you to enter the scores obtained in the various parts of the test, then process them and produce a percentage to be converted in the final score.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/Cambridge-Score-Calculator"
+    },
+    {
+      "id": "Digital_Technologies",
+      "category": "Software",
+      "description": "Project for the course of Digital Technologies, which involves the implementation of a controller in <a href='https://en.wikipedia.org/wiki/VHDL' target='_blank'>VHDL</a> language that manages the correct opening and closing of a gate. The opening is controlled by a sequence of 3 decimal digits provided by a numeric keypad. Project realized in group through the ISE <a href='https://www.xilinx.com/products/design-tools/ise-design-suite/ise-webpack.html' target='_blank'>XILINX ISE (V14.7) WEB PACK</a> with the colleagues Luigi Fiore and Mario Ferrara.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/Digital-Technologies"
+    },
+    {
+      "id": "Youtube_to_mp3",
+      "category": "Software",
+      "description": "Simple <a href='https://www.python.org/' target='_blank'>Python</a> script (implemented via <a href='https://www.jetbrains.com/pycharm/' target='_blank'>PyCharm</a> IDE) for downloading mp3 songs from youtube. The Script requires you to enter the youtube playlist link from which it will download the songs, after that the path where them will be saved. If the path is non-existent, the script will create the folder and save the songs into that.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/Youtube-To-Mp3-Downloader"
+    },
+    {
+      "id": "Computer_Architecture",
+      "category": "Embedded",
+      "description": "Computer architecture course project, which involves the implementation of a Tamagotchi in <a href='https://www.open-std.org/jtc1/sc22/wg14/' target='_blank'>C</a> programming language, using the <a href='https://www.keil.com/products/uvision/ide_ov_starting.asp' target='_blank'>Keil µVision</a> IDE, and deployed on <a href='https://drive.google.com/file/d/1B3OMDClI1cjjxWgG2DUWHuc7foEINWr6/view?usp=sharing' target='_blank'>Landtiger Board</a>. The project involved the implementation of the gui and the commands to interact with the Tamagotchi, then the implementation of the audio part with volume adjustment.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/ase_project"
+    },
+    {
+      "id": "Software_Engineering",
+      "category": "Software",
+      "description": "Project of the Software Engineering course, made by a group of 4 people in <a href='https://www.javascript.com/' target='_blank'>Javascript</a> with the <a href='https://code.visualstudio.com/' target='_blank'>VsCode</a> IDE on the <a href='https://about.gitlab.com/' target='_blank'>GitLab</a> platform. The project included a first phase of adding/modifying some features in a partial implementation of an application to manage expenses (EzWallet). Then there was a phase of <a href='https://drive.google.com/file/d/14lXYJNWTPCpCQtvYtTHd8U33XFJr5By4/view?usp=sharing' target='_blank'>testing</a> of the implemented features, both with unit test and integration test. The project was finally put on <a href='https://www.docker.com/' target='_blank'>docker</a> to test its functionality in a preconfigured environment.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/se_project"
+    },
+    {
+      "id": "Machine_Learning",
+      "category": "ML",
+      "description": "Project of the Machine Learning and Pattern Recognition course, made by a group of 2 people in <a href='https://www.python.org/' target='_blank'>Python</a> with the <a href='https://code.visualstudio.com/' target='_blank'>VsCode</a> IDE. The goal of the project is the development of a classifier to detect whether a fingerprint image represents an authentic fingerprint or a spoofed fingerprint, i.e., a fingerprint image obtained by cloning, possibly with different methods, the fingerprint of an individual. In the project have been considered different working priors, implemented and employed different classifiers (Gaussian, Logistic Regression, SVM, GMM, Fused Models), in order to choose the best one.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/ml_project"
+    },
+    {
+      "id": "Web_App_1",
+      "category": "Web",
+      "description": "Project of the Web Application 1 course, made in <a href='https://www.javascript.com/' target='_blank'>javascript</a> with the <a href='https://code.visualstudio.com/' target='_blank'>VsCode</a> IDE. The goal of the project is to design and implement a web application to manage a small content management system (CMS). The project was made with the <a href='https://react.dev/' target='_blank'>React framework</a>, using <a href='https://react-bootstrap.netlify.app/' target='_blank'>React Bootstrap</a> for styling and <a href='https://nodejs.org/en' target='_blank'>NodeJs</a> as runtime environment.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/aw1_project"
+    },
+    {
+      "id": "Pds",
+      "category": "Software",
+      "description": "Project of the System and device programming course, made by a group of 3 people in <a href='https://www.rust-lang.org/' target='_blank'>Rust</a> with the <a href='https://www.jetbrains.com/clion/' target='_blank'>CLion</a> IDE, using the <a href='https://github.com/linebender/druid' target='_blank'>Druid UI toolkit</a>. The goal of the project is the development of a Multi-platform screen-grabbing utility capable of acquiring what is currently shown in a display, post-process it and make it available in one or more formats.",
+      "image": "./projects/portfolio.png",
+      "link": "https://github.com/Truvella99/pds_project"
+    }
+  ]
 }
