--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@lottiefiles/dotlottie-react": "^0.13.5",
+    "@types/email-validator": "^1.0.32",
     "framer-motion": "^12.9.2",
     "jsonc-parser": "^3.3.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email-validator": "^1.0.2",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0",
-    "react-vertical-timeline-component": "^3.5.3"
+    "react-vertical-timeline-component": "^3.5.3",
+    "sweetalert2": "^11.21.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -28,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
