--- a/src/locales/en.jsonc
+++ b/src/locales/en.jsonc
@@ -20,7 +20,7 @@
   "fd": "Full Stack Developer",
   // --------------------------------------- ABOUT ME SECTION ---------------------------------------
   "about": "About Me",
-  "aboutDescription": "I am a software engineer with a passion for technology and a strong desire to learn and grow. I have experience in various programming languages and frameworks, and I am always eager to take on new challenges. My goal is to create innovative solutions that make a positive impact on the world.",
+  "aboutDescription": "I am a software engineer born in San Giovanni a Piro with a passion for technology and a strong desire to learn and grow. I have experience in various programming languages and frameworks, and I am always eager to take on new challenges. My goal is to create innovative solutions that make a positive impact on the world.",
   "nameTitle": "Name",
   "ageTitle": "Age",
   "years": "Years",
@@ -32,91 +32,91 @@
   "skills": "Skills",
   "skillsDescription": "During my studies and also for personal interest, I developed knowledge of different programming languages, software and frameworks that led to my professional growth.",
   "technicalSkills": {
-    "android": "https://www.typescriptlang.org/",
-    "androidstudio": "https://www.typescriptlang.org/",
-    "api": "https://www.typescriptlang.org/",
-    "assembly": "https://www.typescriptlang.org/",
-    "azure": "https://www.typescriptlang.org/",
-    "c": "https://www.typescriptlang.org/",
-    "chartjs": "https://www.typescriptlang.org/",
-    "chatgpt": "https://www.typescriptlang.org/",
-    "clion": "https://www.typescriptlang.org/",
-    "cpp": "https://www.typescriptlang.org/",
-    "css": "https://www.typescriptlang.org/",
-    "dart": "https://www.typescriptlang.org/",
-    "docker": "https://www.typescriptlang.org/",
-    "expressjs": "https://www.typescriptlang.org/",
-    "firebase": "https://www.typescriptlang.org/",
-    "flutter": "https://www.typescriptlang.org/",
-    "gcp": "https://www.typescriptlang.org/",
-    "git": "https://www.typescriptlang.org/",
-    "github": "https://www.typescriptlang.org/",
-    "githubactions": "https://www.typescriptlang.org/",
-    "githubcopilot": "https://www.typescriptlang.org/",
-    "githubpages": "https://www.typescriptlang.org/",
-    "gitlab": "https://www.typescriptlang.org/",
-    "googlecolab": "https://www.typescriptlang.org/",
-    "gradle": "https://www.typescriptlang.org/",
-    "grafana": "https://www.typescriptlang.org/",
-    "hibernate": "https://www.typescriptlang.org/",
-    "html": "https://www.typescriptlang.org/",
-    "idea": "https://www.typescriptlang.org/",
-    "java": "https://www.typescriptlang.org/",
-    "javascript": "https://www.typescriptlang.org/",
-    "json": "https://www.typescriptlang.org/",
-    "jupyter": "https://www.typescriptlang.org/",
-    "jwt": "https://www.typescriptlang.org/",
-    "kafka": "https://www.typescriptlang.org/",
-    "keycloak": "https://www.typescriptlang.org/",
-    "kotlin": "https://www.typescriptlang.org/",
-    "latex": "https://www.typescriptlang.org/",
-    "linux": "https://www.typescriptlang.org/",
-    "materialui": "https://www.typescriptlang.org/",
-    "mongodb": "https://www.typescriptlang.org/",
-    "mysql": "https://www.typescriptlang.org/",
-    "nextjs": "https://www.typescriptlang.org/",
-    "ngrok": "https://www.typescriptlang.org/",
-    "nodejs": "https://www.typescriptlang.org/",
-    "npm": "https://www.typescriptlang.org/",
-    "numpy": "https://www.typescriptlang.org/",
-    "postgresql": "https://www.typescriptlang.org/",
-    "postman": "https://www.typescriptlang.org/",
-    "prometheus": "https://www.typescriptlang.org/",
-    "pycharm": "https://www.typescriptlang.org/",
-    "python": "https://www.typescriptlang.org/",
-    "pytorch": "https://www.typescriptlang.org/",
-    "react": "https://www.typescriptlang.org/",
-    "reactbootstrap": "https://www.typescriptlang.org/",
-    "rust": "https://www.typescriptlang.org/",
-    "spark": "https://www.typescriptlang.org/",
-    "spring": "https://www.typescriptlang.org/",
-    "sqlite": "https://www.typescriptlang.org/",
-    "tailwindcss": "https://www.typescriptlang.org/",
-    "tomcat": "https://www.typescriptlang.org/",
+    "android": "https://www.android.com/intl/en_us/",
+    "androidstudio": "https://developer.android.com/studio",
+    "api": "https://en.wikipedia.org/wiki/API",
+    "assembly": "https://en.wikipedia.org/wiki/Assembly_language",
+    "azure": "https://azure.microsoft.com/en-us/",
+    "c": "https://www.open-std.org/jtc1/sc22/wg14/",
+    "chartjs": "https://www.chartjs.org/",
+    "chatgpt": "https://chatgpt.com/",
+    "clion": "https://www.jetbrains.com/clion/",
+    "cpp": "https://isocpp.org/",
+    "css": "https://www.w3.org/Style/CSS/Overview.en.html",
+    "dart": "https://dart.dev/",
+    "docker": "https://www.docker.com/",
+    "expressjs": "https://expressjs.com/",
+    "firebase": "https://firebase.google.com/",
+    "flutter": "https://flutter.dev/",
+    "gcp": "https://cloud.google.com/?hl=en",
+    "git": "https://git-scm.com/",
+    "github": "https://github.com/",
+    "githubactions": "https://github.com/features/actions",
+    "githubcopilot": "https://github.com/features/copilot",
+    "githubpages": "https://pages.github.com/",
+    "gitlab": "https://about.gitlab.com/",
+    "googlecolab": "https://colab.google/",
+    "gradle": "https://gradle.org/",
+    "grafana": "https://grafana.com/",
+    "hibernate": "https://hibernate.org/",
+    "html": "https://www.w3.org/html/",
+    "idea": "https://www.jetbrains.com/idea/",
+    "java": "https://www.java.com/en/",
+    "javascript": "https://www.javascript.com/",
+    "json": "https://www.json.org/json-en.html",
+    "jupyter": "https://jupyter.org/",
+    "jwt": "https://jwt.io/",
+    "kafka": "https://kafka.apache.org/",
+    "keycloak": "https://www.keycloak.org/",
+    "kotlin": "https://kotlinlang.org/",
+    "latex": "https://www.latex-project.org/",
+    "linux": "https://www.linux.org/",
+    "materialui": "https://mui.com/material-ui/",
+    "mongodb": "https://www.mongodb.com/",
+    "mysql": "https://www.mysql.com/",
+    "nextjs": "https://nextjs.org/",
+    "ngrok": "https://ngrok.com/",
+    "nodejs": "https://nodejs.org/en/",
+    "npm": "https://www.npmjs.com/",
+    "numpy": "https://numpy.org/",
+    "postgresql": "https://www.postgresql.org/",
+    "postman": "https://www.postman.com/",
+    "prometheus": "https://prometheus.io/",
+    "pycharm": "https://www.jetbrains.com/pycharm/",
+    "python": "https://www.python.org/",
+    "pytorch": "https://pytorch.org/",
+    "react": "https://react.dev/",
+    "reactbootstrap": "https://react-bootstrap.netlify.app/",
+    "rust": "https://www.rust-lang.org/",
+    "spark": "https://spark.apache.org/",
+    "spring": "https://spring.io/",
+    "sqlite": "https://www.sqlite.org/",
+    "tailwindcss": "https://tailwindcss.com/",
+    "tomcat": "https://tomcat.apache.org/",
     "typescript": "https://www.typescriptlang.org/",
-    "vim": "https://www.typescriptlang.org/",
-    "vite": "https://www.typescriptlang.org/",
-    "vmwareworkstation": "https://www.typescriptlang.org/",
-    "vscode": "https://www.typescriptlang.org/",
-    "webstorm": "https://www.typescriptlang.org/",
-    "windows": "https://www.typescriptlang.org/",
-    "wireshark": "https://www.typescriptlang.org/",
-    "wsl": "https://www.typescriptlang.org/",
-    "yaml": "https://www.typescriptlang.org/"
+    "vim": "https://www.vim.org/",
+    "vite": "https://vite.dev/",
+    "vmwareworkstation": "https://www.vmware.com/",
+    "vscode": "https://code.visualstudio.com/",
+    "webstorm": "https://www.jetbrains.com/webstorm/",
+    "windows": "https://www.microsoft.com/en-gb/windows/?r=1",
+    "wireshark": "https://www.wireshark.org/",
+    "wsl": "https://ubuntu.com/desktop/wsl",
+    "yaml": "https://yaml.org/"
   },
   "nonTechnicalSkills": {
-    "chrome": "https://www.typescriptlang.org/",
-    "discord": "https://www.typescriptlang.org/",
-    "excel": "https://www.typescriptlang.org/",
-    "gmail": "https://www.typescriptlang.org/",
-    "linkedin": "https://www.typescriptlang.org/",
-    "notion": "https://www.typescriptlang.org/",
-    "notepadpp": "https://www.typescriptlang.org/",
-    "obs": "https://www.typescriptlang.org/",
-    "overleaf": "https://www.typescriptlang.org/",
-    "powerpoint": "https://www.typescriptlang.org/",
-    "teams": "https://www.typescriptlang.org/",
-    "word": "https://www.typescriptlang.org/",
+    "chrome": "https://www.google.com/intl/en_us/chrome/",
+    "discord": "https://discord.com/",
+    "excel": "https://www.microsoft.com/en-us/microsoft-365/excel",
+    "gmail": "https://workspace.google.com/intl/en_uk/gmail/",
+    "linkedin": "https://www.linkedin.com/",
+    "notion": "https://www.notion.com/",
+    "notepadpp": "https://notepad-plus-plus.org/",
+    "obs": "https://obsproject.com/",
+    "overleaf": "https://www.overleaf.com/",
+    "powerpoint": "https://www.microsoft.com/en-us/microsoft-365/powerpoint",
+    "teams": "https://www.microsoft.com/en-us/microsoft-teams/group-chat-software",
+    "word": "https://www.microsoft.com/en-us/microsoft-365/word"
   },
   // --------------------------------------- EDUCATION SECTION ---------------------------------------
   "education": "Education",
@@ -330,10 +330,18 @@
   // --------------------------------------- CONTACT ME SECTION ---------------------------------------
   "contactMe": "Contact Me",
   "formName": "Name",
+  "formNameError": "Please enter your name.",
   "formEmail": "Email",
+  "formEmailError": "Please enter a valid email.",
   "formSubject": "Subject",
+  "formSubjectError": "Please enter a subject.",
   "formMessage": "Message",
-  "formSubmit": "Submit"
+  "formMessageError": "Please enter a message.",
+  "captcha": "en",
+  "captchaError": "Please complete the reCAPTCHA.",
+  "formSubmit": "Submit",
+  "alertSuccess": "Email sent successfully!",
+  "alertError": "Error in Sending the Email, please try again later."
 }
 
 /*
