add thesis project details and image + update section layouts

--- a/src/locales/en.jsonc
+++ b/src/locales/en.jsonc
@@ -370,6 +370,14 @@
       "description": "Project of the Human Computer Interaction course, made in <a href='https://www.javascript.com/' target='_blank'>javascript</a> with the <a href='https://code.visualstudio.com/' target='_blank'>VsCode</a> IDE. The goal of the project (called GLUTEN-HUB) is to design and implement an application to allow celiacs people to browse several restaurants available, see the offered dishes and ingredients in depth. All this done in order to make them feel safer about the quality of what they will eat, without the risk of feel sick. To achieve this, a focus on the ingredients provenience, as well as quality and safety of the offered products was considered inside the application. The project was made with the <a href='https://react.dev/' target='_blank'>React framework</a>, using <a href='https://react-bootstrap.netlify.app/' target='_blank'>React Bootstrap</a> for styling and <a href='https://nodejs.org/en' target='_blank'>NodeJs</a> as runtime environment.",
       "image": "./projects/humanComputerInteraction.gif",
       "link": "https://github.com/Truvella99/hci_project"
+    },
+    {
+      "id": 18,
+      "name": "Master's Degree Thesis",
+      "category": "Software",
+      "description": "Master's thesis of the artificial intelligence and data analitycs course at the Politecnico di Torino. Purpose of the thesis is too describe the implementation of a cross platform application to support a healtier lifestyle. After a general overview about health guidelines and the system (design, requirement, technolgical stack) the thesis discuss about the actual implementation of the app, the achieved performances and eventual future addition that will be performed, as well as a web application on admin side to allow the editing of some app parameters and to manage lesson and quizzes then showed to the users. The technological stack used is <a href='https://dart.dev/' target='_blank'>Dart</a> as programming language by leveraging on the <a href='https://flutter.dev/' target='_blank'>Flutter</a> framework, as well as the <a href='https://developer.android.com/studio?hl=en' target='_blank'>Android Studio</a> IDE for the mobile application, the <a href='https://react.dev/' target='_blank'>React</a> framework and <a href='https://code.visualstudio.com/' target='_blank'>VsCode</a> IDE, and using <a href='https://firebase.google.com/' target='_blank'>Firebase</a> as backend for the application. The thesis was realized using the <a href='https://www.latex-project.org/' target='_blank'>Latex</a> language and <a href='https://code.visualstudio.com/' target='_blank'>VsCode</a> as text editor.",
+      "image": "./projects/thesis.png",
+      "link": "https://github.com/Truvella99/master_degree_thesis"
     }
   ],
   // --------------------------------------- CONTACT ME SECTION ---------------------------------------
@@ -390,16 +398,3 @@
   // --------------------------------------- FOOTER SECTION ---------------------------------------,
   "allrights": "All rights reserved."
 }
-
-/*
-Advanced Machine Learning	no
-Applicazioni Web I	ok
-Architetture dei sistemi di elaborazione	ok
-Human Computer Interaction	no
-Machine learning and pattern recognition	ok
-Mobile application development	no
-Programmazione di sistema	ok (mettere gif funzionamento)
-Software engineering	ok
-Web Applications II no
-Tesi	30	no (niente codice vedere se mettere)
-*/
